# adcraft

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
data/competitor_ads/: curated.json
data/reference_ads/: calibration_gold_set.json  few_shot_examples.json  labeled_ads.json
plans/: autonomous-iteration.md  bootstrap-scaffold.md  data-layer-briefs.md  generation-evaluation.md  intelligence-analytics.md  streamlit-dashboard.md
presearch/: autonomous-ad-engine.md  multimodal-ad-creatives.md
scripts/: pressure_test.py  run.sh  shadow_test.py
src/: theme.py
src/analytics/: __init__.py  cost.py  trends.py  weights.py
src/briefs/: seed_briefs.py
src/dashboard/: app.py
src/db/: init_db.py  queries.py  schema.sql
src/decisions/: logger.py
src/evaluate/: __init__.py  calibrate.py  composed.py  engine.py  rubrics.py  utils.py  visual_rubrics.py
src/generate/: __init__.py  engine.py  image_engine.py  variants.py  visual_prompt.py
src/intel/: __init__.py  analyzer.py
src/iterate/: __init__.py  controller.py  healing.py  visual_healing.py
tests/: conftest.py  test_analytics_sync.py  test_calibrate.py  test_composed_eval.py  test_cost.py  test_decisions.py  test_evaluate.py  test_export.py  test_generate.py  test_image_engine.py  test_intel.py  test_iterate.py  test_models.py  test_performance.py  test_pipeline.py  test_queries.py  test_trends.py  test_variants.py  test_visual_circuit_breaker.py  test_visual_eval.py  test_visual_pipeline.py  test_visual_prompt.py  test_weights.py
(+13 files in other folders)
