[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "adcraft"
version = "0.1.0"
description = "Autonomous ad copy engine for Varsity Tutors SAT test prep"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "anthropic>=0.40",
    "pydantic>=2.9",
    "litellm>=1.50",
    "plotly>=6.0",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "streamlit>=1.40",
    "tenacity>=9.0",
    "krippendorff>=0.7",
    "scipy>=1.14",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# Prompt strings and rubric text contain long lines by nature
"src/evaluate/rubrics.py" = ["E501"]
"src/generate/engine.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
